--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": "^7.3|^8.0"
     },
     "autoload": {
         "psr-4": {
